Fix green selection on mobiles

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -401,7 +401,6 @@ body.header-fixed-space-default {
 	.header .navbar-nav > .active > a,
 	.header .navbar-nav > .active > a:hover,
 	.header .navbar-nav > .active > a:focus {
-		background: #72c02c;
 		color: #fff !important;
 	}
 
